src/test/deca/context/valid/created/no-initialization.deca
//Description:
//    test overflow error
//
// Resultats:
//    
// 
// Historique:
//    cree le 01/01/2022
{
    boolean x,y;
    y = !x;
}