src/test/deca/context/invalid/created/double-main.deca
//Description:
//    double main
//
// Resultats:
//    Error: double main
// 
// Historique:
//    cree le 01/01/2022
{
    int a;
}

{
    int b;
}